--- a/heroku/Dockerfile
+++ b/heroku/Dockerfile
@@ -1,5 +1,6 @@
 FROM tryretool/backend:latest
 
+RUN apt update && apt install openssh-server -y
 RUN echo '[ -z "$SSH_CLIENT" ] && source <(curl --fail --retry 3 -sSL "$HEROKU_EXEC_URL")' > /heroku-exec.sh
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh
 
